tests/NormalTests/paczka1/fuzzy1/90724481.err
Error in line 4: VHgAq26HVwo S678 37,0
Error in line 13: VHgAq26HVwo A430 5,5
